Fixed spacing on help view

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -158,7 +158,7 @@
 /* =====================================
     About Page
 ========================================*/
-#view-about h3 {margin-top:1em}
+#view-help h3 {margin-top:1em}
 
 .prof {
   display:inline-block;
